[gd_scene load_steps=8 format=3 uid="uid://dtpda1tnwlla8"]

[ext_resource type="Texture2D" uid="uid://c8auxo41tk6d6" path="res://assets/Wizpool/Overworld/sprites bar/banco.png" id="1_nn2f2"]
[ext_resource type="Script" path="res://scripts/banco.gd" id="2_3271p"]
[ext_resource type="Texture2D" uid="uid://dbquditrh2not" path="res://assets/Wizpool/Overworld/Protagonista.png" id="2_j74g5"]
[ext_resource type="Texture2D" uid="uid://86d7vbjmjsa0" path="res://assets/Wizpool/Overworld/Caixa de texto 2.png" id="3_ytv31"]
[ext_resource type="Texture2D" uid="uid://dj3x543ubf0uu" path="res://assets/Wizpool/UI/keyboard_e_outline.png" id="4_vddh1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5gcje"]
size = Vector2(18, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nj8cc"]
size = Vector2(20, 18)

[node name="Banco" type="Node2D"]
script = ExtResource("2_3271p")

[node name="SeatedChar" type="Sprite2D" parent="."]
position = Vector2(0, -15)
texture = ExtResource("2_j74g5")
hframes = 4
vframes = 4
frame = 6

[node name="Banco" type="Sprite2D" parent="."]
texture = ExtResource("1_nn2f2")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_5gcje")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_nj8cc")

[node name="InteractIcon" type="Control" parent="."]
z_index = 4096
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 0

[node name="NinePatchRect" type="NinePatchRect" parent="InteractIcon"]
texture_filter = 1
layout_mode = 0
offset_left = -5.0
offset_top = -24.0
offset_right = 5.0
offset_bottom = -14.0
texture = ExtResource("3_ytv31")

[node name="Sprite2D" type="Sprite2D" parent="InteractIcon/NinePatchRect"]
position = Vector2(5, 5)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_vddh1")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
